<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.com.mx</groupId>
    <artifactId>jcomx</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <!-- Use the latest version whenever possible. -->
        <!--
        <jackson-core-version>2.8.5</jackson-core-version>
        -->
        <nettygroup>io.netty</nettygroup>
        <nettyversion>4.1.6.Final</nettyversion>
    </properties>
    <dependencies>


        <!-- common utils -->
        <!-- fastjson -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.21</version>
        </dependency>
        <!-- junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- logs -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.7</version>
        </dependency>



        <!-- http clients -->
        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.2</version>
        </dependency>
        <!-- end http client-->

        <!-- end common utils -->



        <!-- servers -->
        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>9.4.0.v20161208</version>
        </dependency>
        <!-- end servers -->
        <!-- netty -->
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-transport</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-transport-sctp</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-handler</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-handler-proxy</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-codec-http</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-codec-http2</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-codec-memcache</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-codec-redis</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-codec-socks</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <dependency>
            <groupId>${nettygroup}</groupId>
            <artifactId>netty-codec-stomp</artifactId>
            <version>${nettyversion}</version>
        </dependency>
        <!--
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>5.0.0.Alpha2</version>
        </dependency>
        -->
        <!-- netty -->







        <!-- io utils -->
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava-base -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-base</artifactId>
            <version>r03</version>
        </dependency>

        <!-- end io utils -->

        <!-- jedis -->
        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>2.9.0</version>
        </dependency>
        <!-- end jedis -->







        <!-- groovy and test-->
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy</artifactId>
            <version>2.4.7</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy.maven.runtime</groupId>
            <artifactId>gmaven-runtime-1.0</artifactId>
            <version>1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
        </dependency>
        <!-- end groovy and test-->


    </dependencies>

    <build>
        <plugins>
            <!-- for groovy, use gmaven -->
            <!--
            <plugin>
                <groupId>org.codehaus.gmaven</groupId>
                <artifactId>gmaven-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generateTestStubs</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->
            <!-- use java 1.8 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!-- jetty -->
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.4.0.v20161208</version>
            </plugin>
        </plugins>
    </build>
</project>